# kmr

./: 0README  CHANGELOG.md  DEVELOP.md  DEVELOPER.md  LICENSE  Makefile  README  README.md  ax_mpi.m4  ax_openmp.m4  config.ccvendor.sh  config.h.in  config.make.in  configure  configure.ac  doxyfile  epydoc  mk.pkg  notice.txt  noticeadd.pl
cmd/: Makefile  kmrckptdump.c  kmrfsplit.py  kmrgenscript.in.py  kmrgenscript.template  kmrrungenscript.in.py  kmrrungenscript.template  kmrrungenscript.template.focus  kmrrungenscript.template.k  kmrwrapper.py
docs/: annotated.html  classMPIDP-members.html  classMPIDP.html  classeprun_1_1NullHelpFormatter-members.html  classeprun_1_1NullHelpFormatter.html  classes.html  classkmeanspy_1_1K__Means-members.html  classkmeanspy_1_1K__Means.html  classkmr4py_1_1KMR-members.html  classkmr4py_1_1KMR.html  classkmr4py_1_1KVS-members.html  classkmr4py_1_1KVS.html  classkmr4py_1_1__Slot-members.html  classkmr4py_1_1__Slot.html  classkmr4py_1_1__c__file__option-members.html  classkmr4py_1_1__c__file__option.html  classkmr4py_1_1__c__kvbox-members.html  classkmr4py_1_1__c__kvbox.html  classkmr4py_1_1__c__option-members.html  classkmr4py_1_1__c__option.html  classkmr4py_1_1__c__spawn__option-members.html  classkmr4py_1_1__c__spawn__option.html  classkmr4py_1_1__c__unitsized-members.html  classkmr4py_1_1__c__unitsized.html  dir_1dbe25a2f834f073b75b34bb41f2a8e6.html  dir_50a28221d0f5027093306cfc52a57d36.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_71eb729dfe620fdc00a342f30f6592a7.html  dir_a7b6e2cc3b9ecdf91b3f1ab987176144.html  dir_d662f94a7ad56901e9f15f9d3bbb7823.html  eprun_8py_source.html  files.html  flexdice_8c_source.html  flexdice_8h_source.html  flexdicemain_8c_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_c.html  (+413 more)
docs/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+18 more)
ex/: Makefile  README.md  check-exec-in-kmr.py  check-exec-in-mpi.c  check-exec-in-mpi4py.py  eprun-gather-results.py  eprun.py  flexdicemain.c  forkexec.c  graysort.c  job.fx10.sh  job.k.sh  kmeans-kmr.c  kmeans-mrmpi.cpp  kmeans.py  kmeanspy.py  kmrdp-help.html  kmrdp.cpp  kmreprun.py  leenpagerank.c  mrmpi-crmat.c  mrmpi-wordfreq.c  mykmr_shuffle.c  pagerank.c  phoenix-kmeans.c  phoenix-matrix-multiply.c  pi.c  testdp.c  testdp.table  tpch.c  wfrun.c  wfrun.pi.py  wordcount.c  wordcount.py  wordcountf.f90  wordcountpy.py
kmrrun/: Makefile  kmrrun.c  mpi_pi.kvgen.sh  mpi_pi.mapper.c  mpi_pi.reducer.c  pi.kvgen.sh  pi.mapper.c  pi.reducer.c  wc.kvgen.sh  wc.mapper.py  wc.reducer.py
man/: Makefile  kmrckptdump.1  kmrfsplit.1  kmrgenscript.1  kmrrun.1  kmrrungenscript.1  kmrshell.1  kmrshell_mpi.1  kmrshuffler.1  kmrwatch0.1  kmrwrapper.1
python/: Makefile  kmr4py.py  testpyfiles.py  testpymapms.py  testpyminimum.py  testpyspawn.py
python2/: kmr4py.py  testpyminimum.py
python3/: Makefile  check-py-file.py  check-py-mapms.py  check-py-minimum.py  check-py-spawn.py  kmr4py.py  make-documentation.py
shell/: Makefile  kmrshell.c  kmrshell_mpi.c  kmrshuffler.c  wc.map.pl  wc.mapper.c  wc.reduce.pl  wc.reducer.c
src/: Makefile  bindat.sh  check.semicolons.sh  kmr-overview.html  kmr.h  kmraltkvs.c  kmratoa.c  kmrbase.c  kmrckpt.c  kmrckpt.h  kmrclog2.c  kmrf.F90  kmrfefs.c  kmrfefs.h  kmrfiles.c  kmrimpl.h  kmriolb.c  kmrisort.c  kmrmapmp.c  kmrmapms.c  kmrmoreops.c  kmrspawn.c  kmrspawn.h  kmrtrace.c  kmrtrace.h  kmrutil.c  kmrwatch0.c  kmrwfmap.c  test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  testckpt1.c  testckpt2.c  testckpt3.c  testckpt4.c  (+8 more)
tool/: Makefile  README.md  check-splicezip.sh  flexdice.c  flexdice.h  fugaku-nodeid.scm  make-zip-test-files.sh  splicezip.1  splicezip.c
